Changed hover state on menu button to solid bg. Img bg causing flickering issues.

--- a/picostrap5-child-base/sass/_custom.scss
+++ b/picostrap5-child-base/sass/_custom.scss
@@ -453,7 +453,8 @@ figure {
   transform: scale(1.06);
   // background-color: var(--bs-dark);
   color: #ffffff !important;
-  background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
+  // background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
+  background: #121212;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
